--- a/Payment page/Payment page.html
+++ b/Payment page/Payment page.html
@@ -10,72 +10,88 @@
 </head>
 
 <body>
-    <div class="container mt-5 px-5">
+    <div class="container-md-8 mt-4 px-5 mx-auto text-center">
         <div class="mb-4">
-            <h2>Pay&Join</h2>
+            <h2>Pay & Join</h2>
         </div>
-        <div class="row">
-            <div class="col-md-8">
-                <div class="card p-3">
-                    <h6 class="text-uppercase">Payment details</h6>
-                    <div class="inputbox mt-3"><input type="text" name="name" class="form-control"
-                            required="required"><span>Name on card</span></div>
-                    <div class="row">
+
+        <ul role="tablist" class="nav bg-light nav-pills rounded nav-fill mb-4 col-md-6 mx-auto">
+            <li class="nav-item">
+                <a data-toggle="pill" href="#credit-card" class="nav-link active"> <i
+                        class="fas fa-credit-card mr-2"></i> Credit Card </a>
+            </li>
+            <li class="nav-item">
+                <a data-toggle="pill" href="#paypal" class="nav-link"> <i class="fab fa-paypal mr-2"></i> Helapay </a>
+            </li>
+            <li class="nav-item">
+                <a data-toggle="pill" href="#net-banking" class="nav-link"> <i class="fas fa-mobile-alt mr-2"></i> Net
+                    Banking </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 mt-4 px-5 ms-5">
+            <div class="card p-3">
+                <h6 class="text-uppercase">Payment details</h6>
+                <div class="inputbox mt-3"><input type="text" name="name" class="form-control"
+                        required="required"><span>Name on card</span></div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
+                                required="required"><i class="fa fa-credit-card"></i><span>Card Number</span></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="d-flex flex-row">
+                            <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
+                                    required="required"><span>Expiry</span></div>
+                            <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
+                                    required="required"><span>CVV</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-4 mb-4">
+                    <h6 class="text-uppercase">Billing Address</h6>
+                    <div class="row mt-3">
                         <div class="col-md-6">
                             <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
-                                    required="required"><i class="fa fa-credit-card"></i><span>Card Number</span></div>
+                                    required="required"><span>Street Address</span></div>
                         </div>
                         <div class="col-md-6">
-                            <div class="d-flex flex-row">
-                                <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
-                                        required="required"><span>Expiry</span></div>
-                                <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
-                                        required="required"><span>CVV</span></div>
-                            </div>
+                            <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
+                                    required="required"><span>City</span></div>
                         </div>
                     </div>
-                    <div class="mt-4 mb-4">
-                        <h6 class="text-uppercase">Billing Address</h6>
-                        <div class="row mt-3">
-                            <div class="col-md-6">
-                                <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
-                                        required="required"><span>Street Address</span></div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
-                                        required="required"><span>City</span></div>
-                            </div>
+                    <div class="row mt-2">
+                        <div class="col-md-6">
+                            <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
+                                    required="required"><span>State/Province</span></div>
                         </div>
-                        <div class="row mt-2">
-                            <div class="col-md-6">
-                                <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
-                                        required="required"><span>State/Province</span></div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
-                                        required="required"><span>Zip code</span></div>
-                            </div>
+                        <div class="col-md-6">
+                            <div class="inputbox mt-3 mr-2"><input type="text" name="name" class="form-control"
+                                    required="required"><span>Zip code</span></div>
                         </div>
                     </div>
-                </div>
-                <div class="mt-4 mb-4 d-flex justify-content-between">
-                    <span>Previous step</span>
-                    <button class="btn btn-success px-3">Pay</button>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card card-blue p-3 text-black mb-3">
-                    <span>You have to pay</span>
-                    <div class="d-flex flex-row align-items-end mb-3">
-                        <h1 class="mb-0 yellow">Rs.500.00</h1>
-                    </div>
-                    <div class="hightlight">
-                        <span>It's important to note that the payment made for bidding participation is non-refundable,
-                            as it guarantees your eligibility to bid on the selected car.</span>
-                    </div>
+            <div class="mt-4 mb-4 d-flex justify-content-between">
+                <span>Previous step</span>
+                <button class="btn btn-success px-3">Pay</button>
+            </div>
+        </div>
+        <div class="col-md-4 mt-4 px-5">
+            <div class="card card-blue p-3 text-black mb-3">
+                <span>You have to pay</span>
+                <div class="d-flex flex-row align-items-end mb-3">
+                    <h1 class="mb-0 yellow">Rs.500.00</h1>
+                </div>
+                <div class="hightlight">
+                    <span>It's important to note that the payment made for bidding participation is non-refundable, as
+                        it guarantees your eligibility to bid on the selected car.</span>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
